tests/js_error/source_locations/expression/yield_star/async_iterator_close_finish_throws_module.exp
TypeError: iterator's return method must return an object
   ┌ tests/js_error/source_locations/expression/yield_star/async_iterator_close_finish_throws_module.js:15:3
   |
15 |   yield* iterable;
   |   ^
Stack trace:
  at generator (tests/js_error/source_locations/expression/yield_star/async_iterator_close_finish_throws_module.js:15:3)